2017-10-02 S. Thiell <sthiell@stanford.edu>

	* 1.8 beta2 (1.7.82) release.

	* CLI: make color output legible on dark backgrounds (#334)
	* Event API 2.0: new ev_* method signatures (#232)
	* CLI/Clush.py: initialize logging earlier (#348)
	* NodeUtils: ignore YAML group files with permission error (#348)
	* CLI/Clush.py: fix mishandled broken pipe in Python 3
	* CLI/Nodeset: display warning on misplaced set operation (#318)

2017-09-01 S. Thiell <sthiell@stanford.edu>

	* 1.8 beta1 (1.7.81) release.

2017-08-09 S. Thiell <sthiell@stanford.edu>

	* Added Python 3 support (#337).

2017-07-27 S. Thiell <sthiell@stanford.edu>

	* NodeUtils.py: fix external reverse node group upcall caching issue.

2017-06-27 S. Thiell <sthiell@stanford.edu>

	* CLI/Clush.py: add -n as an alias of --nostdin (#333).

2017-04-29 S. Thiell <sthiell@stanford.edu>

	* NodeSet.py: allow fully numeric node names (ticket #338).

2017-02-21 S. Thiell <sthiell@stanford.edu>

	* Worker/Tree.py: fix defect in file copying code when destination target
	directory is provided (ticket #332).

2016-12-20 S. Thiell <sthiell@stanford.edu>

	* Version 1.7.3 released.

	* conf/groups.conf.d: add an external group source example file for xCAT
	static groups (xcat.conf.example).

2016-12-18 S. Thiell <sthiell@stanford.edu>

	* Clush.py: fix sorting issue with clush -L (ticket #326).

2016-11-06 S. Thiell <sthiell@stanford.edu>

	* cluset: add cluset command with doc to avoid a conflict with xCAT's
	nodeset command (ticket #300).

2016-10-12 All contributors

	* Change license from "CeCILL-C V1" to "LGPL v2.1 or later".

2016-10-04 S. Thiell <sthiell@stanford.edu>

	* setup.py: remove scripts/*; use console_scripts instead.

2016-10-02 S. Thiell <sthiell@stanford.edu>

	* Tree.py: in copy mode, do not send tar data to local targets, but only
	remote ones; this does fix broken pipe errors (ticket #319).

	* Engine.py: implement basic per worker fanout (private), allowing the use